Colab kullanılarak oluşturuldu

--- a/Final423BoraKol.ipynb
+++ b/Final423BoraKol.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYgvmESp2IV4eI9rTq21on",
+      "authorship_tag": "ABX9TyMdTKB63G29aQLFs3/iKS/t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
         },
         "id": "dfzCXLNhpRjO",
-        "outputId": "67af8103-6dc8-48a6-8364-f67c5cbbb5af"
+        "outputId": "592f3bcc-1eb8-41e7-984b-2ee228c9a7ca"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         },
         {
@@ -79,7 +79,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-15e21cad-6455-4d07-a639-9e6c4fe8dd44\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-34f3433a-1511-4655-9142-660cc3eeedd1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -230,7 +230,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-15e21cad-6455-4d07-a639-9e6c4fe8dd44')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34f3433a-1511-4655-9142-660cc3eeedd1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -282,12 +282,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-15e21cad-6455-4d07-a639-9e6c4fe8dd44 button.colab-df-convert');\n",
+              "        document.querySelector('#df-34f3433a-1511-4655-9142-660cc3eeedd1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-15e21cad-6455-4d07-a639-9e6c4fe8dd44');\n",
+              "        const element = document.querySelector('#df-34f3433a-1511-4655-9142-660cc3eeedd1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -307,8 +307,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a838903f-ea1c-4e19-9621-ddd1b229f381\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a838903f-ea1c-4e19-9621-ddd1b229f381')\"\n",
+              "<div id=\"df-5b171496-9092-4978-8117-303781a5c7ab\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5b171496-9092-4978-8117-303781a5c7ab')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -427,7 +427,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a838903f-ea1c-4e19-9621-ddd1b229f381 button');\n",
+              "        document.querySelector('#df-5b171496-9092-4978-8117-303781a5c7ab button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -444,7 +444,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 2
         }
       ],
       "source": [
@@ -486,7 +486,7 @@
           "height": 754
         },
         "id": "W8fdVS_-pe8f",
-        "outputId": "d47df7bb-78d5-455a-b258-83a2a26db8bb"
+        "outputId": "4f9a2167-94dd-4af2-8578-232896af712a"
       },
       "execution_count": 4,
       "outputs": [
@@ -567,7 +567,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4f60c96e-5836-4279-8c4a-f9f41c1cd6b6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e5f8ec10-8f99-4ac6-91dc-469c512cc83f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -745,7 +745,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4f60c96e-5836-4279-8c4a-f9f41c1cd6b6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5f8ec10-8f99-4ac6-91dc-469c512cc83f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -797,12 +797,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4f60c96e-5836-4279-8c4a-f9f41c1cd6b6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e5f8ec10-8f99-4ac6-91dc-469c512cc83f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4f60c96e-5836-4279-8c4a-f9f41c1cd6b6');\n",
+              "        const element = document.querySelector('#df-e5f8ec10-8f99-4ac6-91dc-469c512cc83f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -822,8 +822,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4d8dfc55-58b7-4de2-b9e7-c2f042777bd5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4d8dfc55-58b7-4de2-b9e7-c2f042777bd5')\"\n",
+              "<div id=\"df-a175572f-d384-4de0-befa-300c33c31d28\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a175572f-d384-4de0-befa-300c33c31d28')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -942,7 +942,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4d8dfc55-58b7-4de2-b9e7-c2f042777bd5 button');\n",
+              "        document.querySelector('#df-a175572f-d384-4de0-befa-300c33c31d28 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -978,12 +978,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 661
+          "height": 667
         },
         "id": "tdNQi9ueqgZ_",
-        "outputId": "08c7b6ab-8e99-427e-d780-9022edb5fb29"
+        "outputId": "85968e3a-70bc-4755-a921-40a5d19fee57"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1021,12 +1021,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 693
+          "height": 699
         },
         "id": "n9zqrHexq0rn",
-        "outputId": "666d4e1b-d16f-4f6b-bf27-0ccb0d589e3c"
+        "outputId": "bbf58b06-b242-48c3-936e-90aa6d3ddc28"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1053,9 +1053,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q3IbC-qgrAkz",
-        "outputId": "2351333c-5ef6-4416-c9a2-ace06e7b0e8b"
+        "outputId": "7f1b89d2-b03d-4b93-d2bc-29ec8cb71ca3"
       },
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1104,7 +1104,7 @@
       "metadata": {
         "id": "FWQUav6CsDPK"
       },
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1118,7 +1118,7 @@
       "metadata": {
         "id": "juH9In2EsGyj"
       },
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1134,7 +1134,7 @@
       "metadata": {
         "id": "xmxYschwsI2r"
       },
-      "execution_count": 17,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1146,7 +1146,7 @@
       "metadata": {
         "id": "a-6xGq1ssUgT"
       },
-      "execution_count": 18,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1158,7 +1158,7 @@
       "metadata": {
         "id": "lwI0cYdksWtj"
       },
-      "execution_count": 19,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1173,9 +1173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "atvOfez9sY5P",
-        "outputId": "44aac3ec-06f4-406d-ee37-8d951ca3d9c2"
+        "outputId": "9482b210-5877-430c-b06d-8df217d4b5cf"
       },
-      "execution_count": 20,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1240,7 +1240,7 @@
       "metadata": {
         "id": "ElLLXgBUsuRR"
       },
-      "execution_count": 23,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1255,9 +1255,9 @@
           "height": 74
         },
         "id": "bLY6q-sjs9M6",
-        "outputId": "26fde72b-6a71-4dbb-dd9c-2fb696494293"
+        "outputId": "acc3f66b-1227-4af2-be4b-c4dee7a7466d"
       },
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1270,7 +1270,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 16
         }
       ]
     },
@@ -1284,7 +1284,7 @@
       "metadata": {
         "id": "MDetQIhltAGS"
       },
-      "execution_count": 27,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1296,7 +1296,7 @@
       "metadata": {
         "id": "P4fb3yUetD5k"
       },
-      "execution_count": 28,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1311,12 +1311,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 521
+          "height": 526
         },
         "id": "yjrOsdIUtJoK",
-        "outputId": "a055d5a6-bb41-497e-d177-5dceb8ad834f"
+        "outputId": "008dd330-014e-451b-8419-929eecbc893b"
       },
-      "execution_count": 29,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1343,7 +1343,7 @@
       "metadata": {
         "id": "M4e_KJBft7VT"
       },
-      "execution_count": 31,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1355,7 +1355,7 @@
       "metadata": {
         "id": "5Xyq7Wm8t9RT"
       },
-      "execution_count": 32,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1372,7 +1372,7 @@
       "metadata": {
         "id": "KusD1TwfuEk6"
       },
-      "execution_count": 33,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1397,9 +1397,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tkqp6BlXuGpK",
-        "outputId": "31340f99-6a9b-405c-8fdb-0ae0a56d90be"
+        "outputId": "31920628-4a91-4c68-c223-4bd976a87d2b"
       },
-      "execution_count": 34,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1430,9 +1430,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FKN8N0x7uLU0",
-        "outputId": "7883e4b6-a959-4900-b830-8ed0aa650739"
+        "outputId": "c06f8187-91bc-46f2-c983-481a798fd425"
       },
-      "execution_count": 35,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1442,9 +1442,9 @@
             "Model Evaluation Results:\n",
             "                     Accuracy  Precision    Recall  F1-score   ROC-AUC\n",
             "Logistic Regression  0.871857   0.748691  0.347932  0.475083  0.890846\n",
-            "Decision Tree        0.854826   0.566751  0.547445  0.556931  0.731873\n",
-            "Random Forest        0.893350   0.756944  0.530414  0.623748  0.919937\n",
-            "SVM                  0.883617   0.746032  0.457421  0.567119  0.867322\n"
+            "Decision Tree        0.849554   0.551282  0.523114  0.536829  0.718978\n",
+            "Random Forest        0.889700   0.737201  0.525547  0.613636  0.919828\n",
+            "SVM                  0.883617   0.746032  0.457421  0.567119  0.867224\n"
           ]
         }
       ]
@@ -1465,12 +1465,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 163
+          "height": 117
         },
         "id": "N_GzLFtjuOf6",
-        "outputId": "f2f3bd55-ad31-41b4-c37d-518bf637037e"
+        "outputId": "81736ba9-7f78-42a0-e17c-0d6d047661dd"
       },
-      "execution_count": 37,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1498,7 +1498,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 25
         }
       ]
     },
@@ -1513,13 +1513,14 @@
       "metadata": {
         "id": "_MOz70v3uU40"
       },
-      "execution_count": 38,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Evaluation of the best model\n",
+        "\n",
         "best_model_results = {\n",
         "    'Accuracy': accuracy_score(y_test, y_pred_best),\n",
         "    'Precision': precision_score(y_test, y_pred_best),\n",
@@ -1536,9 +1537,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YLc72knNuoXT",
-        "outputId": "087ae103-cda7-4c57-ccd9-073bb38842fe"
+        "outputId": "2a74b159-0bec-4dfc-df20-884e0f7605fb"
       },
-      "execution_count": 39,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1546,7 +1547,55 @@
           "text": [
             "\n",
             "Best Model Evaluation Results:\n",
-            "{'Accuracy': 0.8913219789132197, 'Precision': 0.7391304347826086, 'Recall': 0.537712895377129, 'F1-score': 0.6225352112676056, 'ROC-AUC': 0.9222062384191426}\n"
+            "{'Accuracy': 0.8937550689375506, 'Precision': 0.7709090909090909, 'Recall': 0.5158150851581509, 'F1-score': 0.6180758017492712, 'ROC-AUC': 0.9269303402182085}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Hyperparameter tuning for SVM\n",
+        "param_grid_svm = {\n",
+        "    'C': [0.1, 1, 10],\n",
+        "    'kernel': ['linear', 'rbf'],\n",
+        "    'gamma': [0.001, 0.01, 0.1, 1]\n",
+        "}\n",
+        "\n",
+        "grid_search_svm = GridSearchCV(SVC(probability=True), param_grid_svm, cv=5, scoring='roc_auc')\n",
+        "grid_search_svm.fit(X_train, y_train)\n",
+        "\n",
+        "best_svm = grid_search_svm.best_estimator_\n",
+        "y_pred_svm = best_svm.predict(X_test)\n",
+        "y_prob_svm = best_svm.predict_proba(X_test)[:, 1]\n",
+        "\n",
+        "svm_results = {\n",
+        "    'Accuracy': accuracy_score(y_test, y_pred_svm),\n",
+        "    'Precision': precision_score(y_test, y_pred_svm),\n",
+        "    'Recall': recall_score(y_test, y_pred_svm),\n",
+        "    'F1-score': f1_score(y_test, y_pred_svm),\n",
+        "    'ROC-AUC': roc_auc_score(y_test, y_prob_svm)\n",
+        "}\n",
+        "\n",
+        "print(\"\\nSVM Model Evaluation Results:\")\n",
+        "print(svm_results)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gZuvYcmYAbAs",
+        "outputId": "d9d38e29-4ccc-4e9c-ae6c-d51b5d8972ab"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "SVM Model Evaluation Results:\n",
+            "{'Accuracy': 0.8706407137064072, 'Precision': 0.7254901960784313, 'Recall': 0.36009732360097324, 'F1-score': 0.48130081300813, 'ROC-AUC': 0.8899882193451378}\n"
           ]
         }
       ]
@@ -1565,9 +1614,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yb1pZducupIS",
-        "outputId": "b812a792-7281-46c7-f3af-3a392c6f0609"
+        "outputId": "7dbfa5ce-b92e-483e-b2ac-1550a5cc5988"
       },
-      "execution_count": 40,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1575,8 +1624,8 @@
           "text": [
             "\n",
             "Cross-Validation ROC-AUC Scores:\n",
-            "[0.97702877 0.94705464 0.89554798 0.87561802 0.86988624]\n",
-            "Mean ROC-AUC: 0.9130271311834808\n"
+            "[0.97718864 0.94366082 0.89288998 0.8749284  0.8751432 ]\n",
+            "Mean ROC-AUC: 0.9127622088598404\n"
           ]
         }
       ]
@@ -1594,9 +1643,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w9Q-_-btusfD",
-        "outputId": "99f245ca-9737-4592-ccfa-8cd62b3010d4"
+        "outputId": "85227f68-34e1-4c14-81e9-ca8f87307dd7"
       },
-      "execution_count": 41,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,8 +1653,8 @@
           "text": [
             "\n",
             "Insights and Conclusion:\n",
-            "The best performing model is: {'max_depth': 20, 'min_samples_leaf': 2, 'min_samples_split': 5, 'n_estimators': 200}\n",
-            "Model evaluation results: {'Accuracy': 0.8913219789132197, 'Precision': 0.7391304347826086, 'Recall': 0.537712895377129, 'F1-score': 0.6225352112676056, 'ROC-AUC': 0.9222062384191426}\n"
+            "The best performing model is: {'max_depth': 10, 'min_samples_leaf': 1, 'min_samples_split': 5, 'n_estimators': 200}\n",
+            "Model evaluation results: {'Accuracy': 0.8937550689375506, 'Precision': 0.7709090909090909, 'Recall': 0.5158150851581509, 'F1-score': 0.6180758017492712, 'ROC-AUC': 0.9269303402182085}\n"
           ]
         }
       ]
